--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,9 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.5.3"
 
+    implementation "androidx.navigation:navigation-compose:$nav_version"
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.1'
