Password field with toggleable visibility

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,5 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
     implementation "net.folivo:trixnity-client:$trixnity_ver"
+    implementation "androidx.compose.material:material-icons-extended"
 }
