Using Matrix singleton

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,6 @@ dependencies {
     implementation 'org.matrix.android:matrix-android-sdk2:1.5.30'
     implementation "androidx.compose.material:material-icons-extended"
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    implementation "androidx.startup:startup-runtime:1.1.1"
+
 }
