--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -27,11 +28,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_17.toString()
     }
     buildFeatures {
         compose true
@@ -76,7 +77,7 @@ dependencies {
     implementation "io.ktor:ktor-client-core:$ktor_ver"
     implementation "io.ktor:ktor-client-okhttp:$ktor_ver"
 
-    annotationProcessor "androidx.room:room-compiler:$room_ver"
+    kapt "androidx.room:room-compiler:$room_ver"
     implementation "androidx.room:room-ktx:$room_ver"
 
 }
