--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     def room_ver = "2.5.1"
 
     implementation "androidx.navigation:navigation-compose:$nav_ver"
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.1'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
@@ -81,5 +81,5 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_ver"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
-
+    implementation "androidx.work:work-runtime-ktx:2.8.1"
 }
